--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   http: ^0.13.3
   shared_preferences: ^2.0.6
   flutter_map: any
-  credit_card: ^0.1.8
+  flutter_credit_card: ^2.0.0
   firebase_core: any
   firebase_messaging: ^10.0.0
   flutter_local_notifications: any
